--- a/course-nlp-master/5-nn-imdb-2911.ipynb
+++ b/course-nlp-master/5-nn-imdb-2911.ipynb
@@ -928,12 +928,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://youtu.be/MDX_x6rKXAs?list=TLPQMjkxMTIwMTkDhFXlLCpNgw&t=1000"
+    "More details about architecture: https://youtu.be/MDX_x6rKXAs?list=TLPQMjkxMTIwMTkDhFXlLCpNgw&t=1000"
    ]
   },
   {
